# arm_bare_metal

./: .gitignore  CMakeLists.txt  README.md  arm_bare_metal.code-workspace
src/: CMakeLists.txt  Makefile  test.c  test.ld
toolchain/: arm01.cmake  clang_arm.cmake  gcc_arm.cmake
